<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="#fff">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <Button
                android:id="@+id/share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_reply_all_black_24dp" />
        </android.support.v7.widget.Toolbar>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fff">


                <com.alexzh.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_person_black_24dp"
                    app:view_borderColor="#cccccc"
                    app:view_borderWidth="0dp"
                    tools:ignore="VectorDrawableCompat" />
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/myprogressbar"
                    android:visibility="gone"
                    android:layout_margin="10dp"
                    android:progressTint="@color/colorPrimaryDark"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:textColor="#7000"
                            android:textSize="14dp" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:background="#00000000"
                            android:hint="@string/full_name"
                            android:padding="5dp"
                            android:textColor="#000"
                            android:textSize="14dp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text=" Location"
                                android:textColor="#000"
                                android:textSize="14dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/ic_location" />

                                <EditText
                                    android:id="@+id/city"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginTop="2dp"
                                    android:hint="Your City"
                                    android:paddingTop="5dp"
                                    android:textColor="#7000"
                                    android:textSize="14sp" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:text="@string/status_description"
                                android:textColor="#000"
                                android:textSize="14dp" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="13dp"
                                    android:layout_height="13dp"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="5dp"
                                    android:background="@drawable/ic_shapes" />


                                <EditText
                                    android:id="@+id/sug"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginTop="2dp"
                                    android:hint="@string/description"
                                    android:paddingTop="5dp"
                                    android:textColor="#7000"
                                    android:textSize="14dp" />
                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ACACAC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_letter"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="#ACACAC" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_social_media"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="#ACACAC" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_symbol"/>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ACACAC" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listhomelesinform"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>